{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 154,
  "lineage": "10dec70a-17c8-b91c-bd0b-8464421b7511",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bustercloud_nat_gateway_eip-az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed76ec9a10ae0c00",
            "arn": "arn:aws:ec2:us-east-2:051826738226:elastic-ip/eipalloc-0ed76ec9a10ae0c00",
            "domain": "vpc",
            "id": "eipalloc-0ed76ec9a10ae0c00",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-217-34-110.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.34.110",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "bustercloud_project_nat_gateway_eip-az1a"
            },
            "tags_all": {
              "Name": "bustercloud_project_nat_gateway_eip-az1a"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bustercloud_jupiter_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04985531f48a27ae7",
            "arn": "arn:aws:ec2:us-east-2:051826738226:instance/i-0059db560fce917e3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0059db560fce917e3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "patty-moore-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fbd2cc4ea0e8acf0",
            "private_dns": "ip-10-0-1-144.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.144",
            "public_dns": "ec2-3-144-242-199.us-east-2.compute.amazonaws.com",
            "public_ip": "3.144.242.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04c478a8e4a1ea75b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066d8201dbb5ba466",
            "tags": {
              "Name": "Jupiter Web Server"
            },
            "tags_all": {
              "Name": "Jupiter Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02e0f5525a97151e9"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_security_group.alb_security_group",
            "aws_security_group.bustercloud_jupiter_web_sg",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bustercloud_project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:internet-gateway/igw-01fa3bb3739c3bf41",
            "id": "igw-01fa3bb3739c3bf41",
            "owner_id": "051826738226",
            "tags": {
              "Name": "bustercloud_project_igw"
            },
            "tags_all": {
              "Name": "bustercloud_project_igw"
            },
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "dependencies": [
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:051826738226:loadbalancer/app/bustercloud-project-alb/d984e6d4fd85fbf4",
            "arn_suffix": "app/bustercloud-project-alb/d984e6d4fd85fbf4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bustercloud-project-alb-795166972.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:051826738226:loadbalancer/app/bustercloud-project-alb/d984e6d4fd85fbf4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bustercloud-project-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-002219cfef9e5d1f6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d9ab96a8730efac"
              },
              {
                "subnet_id": "subnet-066d8201dbb5ba466"
              }
            ],
            "subnets": [
              "subnet-05d9ab96a8730efac",
              "subnet-066d8201dbb5ba466"
            ],
            "tags": {
              "Name": "application-load-balancer"
            },
            "tags_all": {
              "Name": "application-load-balancer"
            },
            "vpc_id": "vpc-05ee0011dc755e270",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_security_group.alb_security_group",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_subnet.bustercloud_project_public_subnet-az1b",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:051826738226:listener/app/bustercloud-project-alb/d984e6d4fd85fbf4/edf6fae3c5179305",
            "certificate_arn": "arn:aws:acm:us-east-2:051826738226:certificate/389c61d4-891c-44ea-b36e-8999fd4ac01e",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:051826738226:targetgroup/bustercloud-jupiter-tg/fac4635c6fb3c912",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:051826738226:listener/app/bustercloud-project-alb/d984e6d4fd85fbf4/edf6fae3c5179305",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:051826738226:loadbalancer/app/bustercloud-project-alb/d984e6d4fd85fbf4",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ssl_certificate",
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_lb.application_load_balancer",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb_security_group",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_subnet.bustercloud_project_public_subnet-az1b",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bustercloud_project_alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:051826738226:listener/app/bustercloud-project-alb/d984e6d4fd85fbf4/c9fae9f302ae6955",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:051826738226:listener/app/bustercloud-project-alb/d984e6d4fd85fbf4/c9fae9f302ae6955",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:051826738226:loadbalancer/app/bustercloud-project-alb/d984e6d4fd85fbf4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_lb.application_load_balancer",
            "aws_security_group.alb_security_group",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_subnet.bustercloud_project_public_subnet-az1b",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:051826738226:targetgroup/bustercloud-jupiter-tg/fac4635c6fb3c912",
            "arn_suffix": "targetgroup/bustercloud-jupiter-tg/fac4635c6fb3c912",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200,301,302",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:051826738226:targetgroup/bustercloud-jupiter-tg/fac4635c6fb3c912",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bustercloud-jupiter-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "dependencies": [
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jupiter_web_target_group_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:051826738226:targetgroup/bustercloud-jupiter-tg/fac4635c6fb3c912-20250502092535239800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:051826738226:targetgroup/bustercloud-jupiter-tg/fac4635c6fb3c912",
            "target_id": "i-0059db560fce917e3"
          },
          "dependencies": [
            "aws_instance.bustercloud_jupiter_web",
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_lb_target_group.alb_target_group",
            "aws_security_group.alb_security_group",
            "aws_security_group.bustercloud_jupiter_web_sg",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "bustercloud_nat_gateway-az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed76ec9a10ae0c00",
            "association_id": "eipassoc-0e1ed5db4b7a98c34",
            "connectivity_type": "public",
            "id": "nat-0e4fc4edc96ad52bc",
            "network_interface_id": "eni-00cd27b0289422a99",
            "private_ip": "10.0.1.239",
            "public_ip": "18.217.34.110",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-066d8201dbb5ba466",
            "tags": {
              "Name": "bustercloud_nat_gateway-az1a"
            },
            "tags_all": {
              "Name": "bustercloud_nat_gateway-az1a"
            }
          },
          "dependencies": [
            "aws_eip.bustercloud_nat_gateway_eip-az1a",
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bustercloud_private_app_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:route-table/rtb-0c64f382f61fe2134",
            "id": "rtb-0c64f382f61fe2134",
            "owner_id": "051826738226",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e4fc4edc96ad52bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table fpr Private Subnets"
            },
            "tags_all": {
              "Name": "Route Table fpr Private Subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.bustercloud_nat_gateway_eip-az1a",
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_nat_gateway.bustercloud_nat_gateway-az1a",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bustercloud_private_db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:route-table/rtb-0e71e766165ddfdcf",
            "id": "rtb-0e71e766165ddfdcf",
            "owner_id": "051826738226",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e4fc4edc96ad52bc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table fpr Private Subnets"
            },
            "tags_all": {
              "Name": "Route Table fpr Private Subnets"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.bustercloud_nat_gateway_eip-az1a",
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_nat_gateway.bustercloud_nat_gateway-az1a",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bustercloud_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:route-table/rtb-00f57be92d88e9f40",
            "id": "rtb-00f57be92d88e9f40",
            "owner_id": "051826738226",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01fa3bb3739c3bf41",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bustercloud_public_rt"
            },
            "tags_all": {
              "Name": "bustercloud_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014b33feba0f25b1c",
            "route_table_id": "rtb-0c64f382f61fe2134",
            "subnet_id": "subnet-0a579195090835e54"
          },
          "dependencies": [
            "aws_eip.bustercloud_nat_gateway_eip-az1a",
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_nat_gateway.bustercloud_nat_gateway-az1a",
            "aws_route_table.bustercloud_private_app_rt",
            "aws_subnet.bustercloud_project_private_app_subnet-az1a",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc995bb83e007bb5",
            "route_table_id": "rtb-0c64f382f61fe2134",
            "subnet_id": "subnet-066f036b99126da55"
          },
          "dependencies": [
            "aws_eip.bustercloud_nat_gateway_eip-az1a",
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_nat_gateway.bustercloud_nat_gateway-az1a",
            "aws_route_table.bustercloud_private_app_rt",
            "aws_subnet.bustercloud_project_private_app_subnet-az1b",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee33b8a95b9bb855",
            "route_table_id": "rtb-0e71e766165ddfdcf",
            "subnet_id": "subnet-0d233e23a2b160ca4"
          },
          "dependencies": [
            "aws_eip.bustercloud_nat_gateway_eip-az1a",
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_nat_gateway.bustercloud_nat_gateway-az1a",
            "aws_route_table.bustercloud_private_db_rt",
            "aws_subnet.bustercloud_project_private_db_subnet-az1a",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0fe2a00b2d751dd",
            "route_table_id": "rtb-0e71e766165ddfdcf",
            "subnet_id": "subnet-0a29660cf24b81f20"
          },
          "dependencies": [
            "aws_eip.bustercloud_nat_gateway_eip-az1a",
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_nat_gateway.bustercloud_nat_gateway-az1a",
            "aws_route_table.bustercloud_private_db_rt",
            "aws_subnet.bustercloud_project_private_db_subnet-az1b",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c80acb2a95713de",
            "route_table_id": "rtb-00f57be92d88e9f40",
            "subnet_id": "subnet-066d8201dbb5ba466"
          },
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_route_table.bustercloud_public_rt",
            "aws_subnet.bustercloud_project_public_subnet-az1a",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019b0095e83c25bdb",
            "route_table_id": "rtb-00f57be92d88e9f40",
            "subnet_id": "subnet-05d9ab96a8730efac"
          },
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_route_table.bustercloud_public_rt",
            "aws_subnet.bustercloud_project_public_subnet-az1b",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:security-group/sg-002219cfef9e5d1f6",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002219cfef9e5d1f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow http acccess to the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow https acccess to the internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb_security_group",
            "name_prefix": "",
            "owner_id": "051826738226",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bustercloud_project_alb_sg"
            },
            "tags_all": {
              "Name": "bustercloud_project_alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bustercloud_jupiter_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:security-group/sg-02e0f5525a97151e9",
            "description": "Allow internet access to the web server http port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02e0f5525a97151e9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow http acccess to the internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002219cfef9e5d1f6"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "allow https acccess to the internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-002219cfef9e5d1f6"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bustercloud_jupiter_web_sg",
            "name_prefix": "",
            "owner_id": "051826738226",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bustercloud_jupiter_web_sg"
            },
            "tags_all": {
              "Name": "bustercloud_jupiter_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bustercloud_project_private_app_subnet-az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:subnet/subnet-0a579195090835e54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a579195090835e54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051826738226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bustercloud_project_private_app_subnet-az1a"
            },
            "tags_all": {
              "Name": "bustercloud_project_private_app_subnet-az1a"
            },
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bustercloud_project_private_app_subnet-az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:subnet/subnet-066f036b99126da55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066f036b99126da55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051826738226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bustercloud_project_private_app_subnet-az1b"
            },
            "tags_all": {
              "Name": "bustercloud_project_private_app_subnet-az1b"
            },
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bustercloud_project_private_db_subnet-az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:subnet/subnet-0d233e23a2b160ca4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d233e23a2b160ca4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051826738226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bustercloud_project_private_db_subnet-az1a"
            },
            "tags_all": {
              "Name": "bustercloud_project_private_db_subnet-az1a"
            },
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bustercloud_project_private_db_subnet-az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:subnet/subnet-0a29660cf24b81f20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a29660cf24b81f20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "051826738226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bustercloud_project_private_db_subnet-az1a"
            },
            "tags_all": {
              "Name": "bustercloud_project_private_db_subnet-az1a"
            },
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bustercloud_project_public_subnet-az1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:subnet/subnet-066d8201dbb5ba466",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066d8201dbb5ba466",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051826738226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bustercloud_project_public_subnet-az1a"
            },
            "tags_all": {
              "Name": "bustercloud_project_public_subnet-az1a"
            },
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bustercloud_project_public_subnet-az1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:subnet/subnet-05d9ab96a8730efac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d9ab96a8730efac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "051826738226",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "bustercloud_project_public_subnet-az1b"
            },
            "tags_all": {
              "Name": "bustercloud_project_public_subnet-az1b"
            },
            "vpc_id": "vpc-05ee0011dc755e270"
          },
          "dependencies": [
            "aws_internet_gateway.bustercloud_project_igw",
            "aws_vpc.bustercloud_project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bustercloud_project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:051826738226:vpc/vpc-05ee0011dc755e270",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-056ff14a84e6d491f",
            "default_route_table_id": "rtb-0f4a64fda22dc3d8d",
            "default_security_group_id": "sg-00508dac5cd134bf2",
            "dhcp_options_id": "dopt-079684f3ca1f06974",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ee0011dc755e270",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f4a64fda22dc3d8d",
            "owner_id": "051826738226",
            "tags": {
              "Name": "bustercloud_project_vpc"
            },
            "tags_all": {
              "Name": "bustercloud_project_vpc"
            }
          }
        }
      ]
    }
  ]
}